Change the icon size to 16dp in the profile chooser.

The CL also updates the actual Autofill Home icons with the required size.

Bug: 856662
Change-Id: I3b8df3dec255cb703bd856183de30490640638a1
Reviewed-on: https://chromium-review.googlesource.com/1152983
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579387}
Former-commit-id: ed60367fd5aee162692049220741b6506cb75027